centered container on mobile: blind fix

--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,13 @@ a {
     min-width: 530px;
     max-width: 1000px;
   }
+
+  .picture-cell-tall {
+    grid-row: span 2 / auto;
+  }
+  .picture-cell-wide {
+    grid-column: 1 / -1;
+  }
 }
 
 @media screen and (max-width: 35em) {
@@ -156,15 +163,6 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
-}
-
-@media only screen and (min-width: 35em) {
-  .picture-cell-tall {
-    grid-row: span 2 / auto;
-  }
-  .picture-cell-wide {
-    grid-column: 1 / -1;
-  }
 }
 
 #GooglePlay-link {
